# witigo

./: .gitignore  LICENSE  README.md  Taskfile.yml  go.mod  go.sum
.github/: copilot-instructions.md
.github/workflows/: test.yml
cmd/: main.go
docs/: CanonicalABI.md
examples/all-types/: main.go  main_test.go
examples/all-types/lib/: CMakeLists.txt
examples/all-types/lib/cmake/presets/: wasi.json
examples/all-types/lib/cmake/toolchains/: wasi-sdk.toolchain.cmake
examples/all-types/lib/src/: CMakeLists.txt  component.cpp  component.wit
examples/basic/: main.go  main_test.go  wit.json
examples/basic/host/: main.go
examples/basic/lib/: CMakeLists.txt  CMakePresets.json
examples/basic/lib/cmake/toolchains/: wasi-sdk.toolchain.cmake
examples/basic/lib/src/: CMakeLists.txt  basic.cpp  component.cpp  component.wit
pkg/: abi_load.go  abi_options.go  abi_type.go  abi_type_enum.go  abi_type_flags.go  abi_type_list.go  abi_type_option.go  abi_type_primitive.go  abi_type_record.go  abi_type_result.go  abi_type_tuple.go  abi_type_variant.go  mylib.go  runtime_memory.go  util.go
pkg/abi/: abi_options.go  enum.go  enum_test.go  function.go  function_test.go  list.go  list_test.go  option.go  option_test.go  parameters.go  primitive.go  primitive_test.go  read.go  record.go  record_test.go  sizeof_test.go  string.go  string_test.go  util.go  util_test.go  variant.go  variant_test.go  wazero.go
pkg/abi/test/: function_test.go  list_test.go  option_test.go  primitive_test.go  record_test.go  sizeof_test.go  string_test.go  util.go  util_test.go
pkg/codegen/: generate.go  generate_function.go  generate_type.go  generate_world.go  util.go  util_test.go
pkg/wasmtools/: instance.go  instance_wazero.go  util.go
pkg/wit/: wit.go  wit_function.go  wit_type.go  wit_type_reference.go  wit_world.go
test/: abi_load_test.go  abi_type_enum_test.go  abi_type_variant_test.go  mylib_test.go  util_test.go
